--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
           <div class="contact-option">
             <ul>
               <li><a href="request.html">Request a Service</a></li>
-              <li><a href="about1.html">Know About Us</a></li>
+              <li><a href="about.html">Know About Us</a></li>
               <li><a href="jobs.html">Join Us</a></li>
               <li><a href="#">Learn With Us</a></li>
             </ul>
@@ -519,6 +519,11 @@
         <p>&copy; 2025 IT-Wings Webtech Solutions. All Rights Reserved.</p>
       </div>
     </footer>
+
+    <!-- scroll to top -->
+    <div class="uppper-up-btn">
+      <a href="#" id="scrollBtn"><i class="fa-solid fa-arrow-up"></i></a>
+    </div>
 
     <!-- jquery -->
     <script
