--- a/serviceInfo.html
+++ b/serviceInfo.html
@@ -133,7 +133,7 @@
           <div class="contact-option">
             <ul>
               <li><a href="request.html">Request a Service</a></li>
-              <li><a href="about1.html">Know About Us</a></li>
+              <li><a href="about.html">Know About Us</a></li>
               <li><a href="jobs.html">Join Us</a></li>
               <li><a href="#">Learn With Us</a></li>
             </ul>
@@ -143,46 +143,51 @@
     </section>
 
     <!-- ===== Service Banner ===== -->
-    <!-- banner -->
-    <section
-      class="global-banner"
-      style="background-image: url(images/career/career-1.jpg)"
-    >
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="global-wrapper">
-          <div class="global-content">
-            <!-- <h1>About Us</h1> -->
-          </div>
-        </div>
-      </div>
-    </section>
 
     <main>
-      <!-- ===== Service Description ===== -->
-      <section class="service-details">
+      <!-- ===== HERO / TITLE SECTION ===== -->
+      <section class="service-hero" style="padding: 150px 0">
         <div class="container">
-          <h2>About This Service</h2>
+          <h1>Software Development Service</h1>
           <p>
-            Our software development service provides end-to-end solutions to
-            help businesses build robust, scalable, and high-performance
-            applications. From planning to deployment, we focus on innovation,
-            security, and quality assurance to deliver exceptional digital
-            products that drive results.
-          </p>
-          <p>
-            Whether you need a web platform, enterprise software, or
-            custom-built solution, our team ensures every line of code aligns
-            with your business goals and technical requirements.
+            Building powerful, scalable, high-performance digital solutions for
+            your business.
           </p>
         </div>
       </section>
 
-      <!-- ===== Requirements Section ===== -->
+      <!-- ===== SERVICE DESCRIPTION ===== -->
+      <section class="service-details">
+        <div class="container">
+          <h2>About This Service</h2>
+
+          <div class="service-details-grid">
+            <div class="text-block">
+              <p>
+                Our software development service provides end-to-end solutions
+                for businesses looking to create powerful and scalable digital
+                products. From concept to deployment, we deliver secure,
+                high-quality applications that drive results.
+              </p>
+              <p>
+                Whether you need enterprise software, a custom application, or a
+                complete digital transformation, our team ensures every feature
+                aligns with your business goals.
+              </p>
+            </div>
+
+            <figure class="service-image">
+              <img src="images/career-2.jpg" alt="Software Development" />
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===== REQUIREMENTS SECTION ===== -->
       <section class="service-requirements">
         <div class="container">
           <div class="requirements-wrapper">
-            <!-- Left Side: List -->
+            <!-- Left List -->
             <div class="requirements-list">
               <h2>Requirements for This Service</h2>
               <ul>
@@ -198,7 +203,7 @@
                   list
                 </li>
                 <li>
-                  <i class="fa-solid fa-check"></i> Technical stack preferences
+                  <i class="fa-solid fa-check"></i> Tech stack preferences
                 </li>
                 <li>
                   <i class="fa-solid fa-check"></i> Timeline & budget estimation
@@ -206,15 +211,15 @@
               </ul>
             </div>
 
-            <!-- Right Side: Visual / CTA Block -->
+            <!-- CTA Section -->
             <div class="requirements-visual">
               <figure>
                 <img src="images/career-2.jpg" alt="Service Visual" />
               </figure>
               <div class="quote-box">
                 <p>
-                  “We don’t just build IT solutions — we build your business’s
-                  digital foundation with precision, creativity, and purpose.”
+                  “We don’t just build solutions — we build digital foundations
+                  for long-term success.”
                 </p>
                 <a href="contact1.html" class="cta-btn">Request a Quote</a>
               </div>
@@ -223,46 +228,214 @@
         </div>
       </section>
 
-      <!-- ===== Other Services Section ===== -->
+      <!-- ===== Why Choose Us Section ===== -->
+      <section class="why-choose-us">
+        <div class="container">
+          <div class="section_wrapper">
+            <div class="section-header">
+              <h2>Why Choose <span>Us</span></h2>
+              <p>
+                Empowering businesses with cutting-edge IT solutions,
+                innovation, and dedicated support.
+              </p>
+            </div>
+
+            <div class="home-choose-grid">
+              <!-- Card 1 -->
+              <div class="choose-card">
+                <i class="fas fa-code"></i>
+                <h3>Expert Developers</h3>
+                <p>
+                  Our experienced developers deliver robust, scalable, and
+                  efficient code tailored to your business needs.
+                </p>
+              </div>
+
+              <!-- Card 2 -->
+              <div class="choose-card">
+                <i class="fas fa-cloud"></i>
+                <h3>Cloud Solutions</h3>
+                <p>
+                  We offer secure and reliable cloud-based services for seamless
+                  business operations and data management.
+                </p>
+              </div>
+
+              <!-- Card 3 -->
+              <div class="choose-card">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Advanced Security</h3>
+                <p>
+                  Protect your digital assets with our advanced cybersecurity
+                  strategies and continuous monitoring.
+                </p>
+              </div>
+
+              <!-- Card 4 -->
+              <div class="choose-card">
+                <i class="fas fa-users-cog"></i>
+                <h3>Dedicated Support</h3>
+                <p>
+                  Our 24/7 dedicated support team ensures your systems run
+                  smoothly without interruptions.
+                </p>
+              </div>
+
+              <!-- Card 5 -->
+              <div class="choose-card">
+                <i class="fas fa-rocket"></i>
+                <h3>Innovation Driven</h3>
+                <p>
+                  We integrate the latest technologies and creative thinking to
+                  help your business stay ahead.
+                </p>
+              </div>
+
+              <!-- Card 6 -->
+              <div class="choose-card">
+                <i class="fas fa-chart-line"></i>
+                <h3>Proven Results</h3>
+                <p>
+                  Our track record speaks for itself — measurable growth,
+                  improved performance, and satisfied clients.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===== OTHER SERVICES ===== -->
       <section class="other-services">
         <div class="container">
           <h2>Explore Other Services</h2>
+
           <div class="other-services-grid">
             <div class="service-card">
               <img
-                src="https://source.unsplash.com/400x300/?cloud,server"
-                alt="Cloud Services"
+                src="https://source.unsplash.com/500x400/?cloud,server"
+                alt="Cloud Integration"
               />
               <h3>Cloud Integration</h3>
+              <p>
+                Secure, scalable deployment on the world’s top cloud platforms.
+              </p>
               <a href="#" class="view-btn">View Details</a>
             </div>
 
             <div class="service-card">
               <img
-                src="https://source.unsplash.com/400x300/?cybersecurity,security"
+                src="https://source.unsplash.com/500x400/?cybersecurity"
                 alt="Cyber Security"
               />
               <h3>Cybersecurity Solutions</h3>
+              <p>
+                Protect your business with enterprise-grade security systems.
+              </p>
               <a href="#" class="view-btn">View Details</a>
             </div>
 
             <div class="service-card">
               <img
-                src="https://source.unsplash.com/400x300/?mobile,app"
+                src="https://source.unsplash.com/500x400/?mobile,app"
                 alt="App Development"
               />
               <h3>Mobile App Development</h3>
+              <p>
+                Create cross-platform iOS & Android apps with stunning
+                performance.
+              </p>
               <a href="#" class="view-btn">View Details</a>
             </div>
 
             <div class="service-card">
               <img
-                src="https://source.unsplash.com/400x300/?digital,marketing"
+                src="https://source.unsplash.com/500x400/?digital,marketing"
                 alt="Digital Marketing"
               />
               <h3>Digital Marketing</h3>
+              <p>Boost brand visibility and reach the right audience.</p>
               <a href="#" class="view-btn">View Details</a>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===== Testimonial Section ===== -->
+      <section class="testimonial-section">
+        <div class="container">
+          <div class="section_wrapper">
+            <div class="section-header">
+              <h2>What Our <span>Clients Say</span></h2>
+              <p>
+                Hear directly from our satisfied clients about how IT Wings
+                Webtech Solutions transformed their businesses.
+              </p>
+            </div>
+
+            <!-- Testimonial Slider -->
+            <div class="testimonial-slider owl-carousel">
+              <!-- Testimonial 1 -->
+              <div class="testimonial-slide">
+                <div class="testimonial-content">
+                  <p>
+                    “The IT Wings team exceeded our expectations. They delivered
+                    a high-performing web platform with great attention to
+                    detail and top-notch security.”
+                  </p>
+                </div>
+                <div class="testimonial-client">
+                  <figure>
+                    <img src="images/testimonials/client1.jpg" alt="Client 1" />
+                  </figure>
+                  <div class="client-info">
+                    <h3>Rahul Sharma</h3>
+                    <span>CEO, NextGen Systems</span>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Testimonial 2 -->
+              <div class="testimonial-slide">
+                <div class="testimonial-content">
+                  <p>
+                    “Working with IT Wings was a smooth experience. Their cloud
+                    migration service improved our uptime and scalability
+                    instantly.”
+                  </p>
+                </div>
+                <div class="testimonial-client">
+                  <figure>
+                    <img src="images/testimonials/client2.jpg" alt="Client 2" />
+                  </figure>
+                  <div class="client-info">
+                    <h3>Priya Mehta</h3>
+                    <span>CTO, FinTech Hive</span>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Testimonial 3 -->
+              <div class="testimonial-slide">
+                <div class="testimonial-content">
+                  <p>
+                    “Their innovative ideas and strong technical execution
+                    helped us achieve better performance and customer engagement
+                    online.”
+                  </p>
+                </div>
+                <div class="testimonial-client">
+                  <figure>
+                    <img src="images/testimonials/client3.jpg" alt="Client 3" />
+                  </figure>
+                  <div class="client-info">
+                    <h3>James Wilson</h3>
+                    <span>Marketing Head, CloudCore Inc.</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- End Slider -->
           </div>
         </div>
       </section>
@@ -354,6 +527,11 @@
       </div>
     </footer>
 
+    <!-- scroll to top -->
+    <div class="uppper-up-btn">
+      <a href="#" id="scrollBtn"><i class="fa-solid fa-arrow-up"></i></a>
+    </div>
+
     <!-- jquery -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -379,5 +557,66 @@
     </script>
     <!-- custom js -->
     <script src="js/main.js"></script>
+    <script>
+      // Get ID from URL
+      const params = new URLSearchParams(window.location.search);
+      const id = params.get("id");
+
+      if (!id) {
+        alert("No service selected");
+      }
+
+      // Load JSON
+      fetch("data/services.json")
+        .then((res) => res.json())
+        .then((data) => {
+          const service = data[id];
+
+          // if (!service) {
+          //   document.body.innerHTML = "<h1>Service Not Found</h1>";
+          //   return;
+          // }
+
+          // HERO
+          document.querySelector(".service-hero h1").textContent =
+            service.title;
+          document.querySelector(".service-hero p").textContent =
+            service.subtitle;
+          document.querySelector(
+            ".service-hero"
+          ).style.backgroundImage = `url(${service.banner})`;
+
+          // DESCRIPTION
+          document.getElementById("description").innerHTML = service.description
+            .map((p) => `<p>${p}</p>`)
+            .join("");
+
+          // MAIN IMAGE
+          document.getElementById("main-image").src = service.image;
+
+          // REQUIREMENTS LIST
+          document.getElementById("requirements-list").innerHTML =
+            service.requirements
+              .map(
+                (item) => `<li><i class="fa-solid fa-check"></i> ${item}</li>`
+              )
+              .join("");
+
+          // OTHER SERVICES
+          document.getElementById("other-services").innerHTML =
+            service.otherServices
+              .map(
+                (s) => `
+          <div class="service-card">
+            <img src="${s.image}" alt="${s.title}" />
+            <h3>${s.title}</h3>
+            <p>${s.shortText}</p>
+            <a href="service-details.html?id=${s.id}" class="view-btn">View Details</a>
+          </div>
+        `
+              )
+              .join("");
+        });
+    </script>
   </body>
 </html>
