--- a/career.html
+++ b/career.html
@@ -128,18 +128,18 @@
         <div class="nav-service-wrapper">
           <div class="nav-contact-content">
             <div class="text">
-              <h2>Have something in mind?</h2>
+              <h2>What’s on your mind?</h2>
               <p>
-                Let’s collaborate! Tell us your goals and we’ll guide you toward
-                the perfect digital solution for your business.
+                We’re here to help! Tell us what you’re looking for and we’ll
+                get you connected to the right people.
               </p>
             </div>
           </div>
           <div class="contact-option">
             <ul>
-              <li><a href="#">Request a Project</a></li>
-              <li><a href="#">Know About IT Wings</a></li>
-              <li><a href="#">Join Our Team</a></li>
+              <li><a href="request.html">Request a Service</a></li>
+              <li><a href="about.html">Know About Us</a></li>
+              <li><a href="jobs.html">Join Us</a></li>
               <li><a href="#">Learn With Us</a></li>
             </ul>
           </div>
@@ -368,6 +368,11 @@
         <p>&copy; 2025 IT Wings Webtech Solutions. All Rights Reserved.</p>
       </div>
     </footer>
+
+    <!-- scroll to top -->
+    <div class="uppper-up-btn">
+      <a href="#" id="scrollBtn"><i class="fa-solid fa-arrow-up"></i></a>
+    </div>
 
     <!-- ===================== Script ===================== -->
     <script src="js/main.js"></script>
