--- a/contact.html
+++ b/contact.html
@@ -145,9 +145,9 @@
           </div>
           <div class="contact-option">
             <ul>
-              <li><a href="#">Request a Service</a></li>
-              <li><a href="#">Know About Us</a></li>
-              <li><a href="#">Join Us</a></li>
+              <li><a href="request.html">Request a Service</a></li>
+              <li><a href="about.html">Know About Us</a></li>
+              <li><a href="jobs.html">Join Us</a></li>
               <li><a href="#">Learn With Us</a></li>
             </ul>
           </div>
@@ -350,6 +350,11 @@
         <p>&copy; 2025 IT Wings Webtech Solutions. All Rights Reserved.</p>
       </div>
     </footer>
+
+    <!-- scroll to top -->
+    <div class="uppper-up-btn">
+      <a href="#" id="scrollBtn"><i class="fa-solid fa-arrow-up"></i></a>
+    </div>
 
     <!-- jquery -->
     <script
