--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
             <div class="list">
               <h2>Tech</h2>
               <ul>
-                <li>Web Development</li>
+                <li>
+                  <a href="./serviceInfo.html?id=web-development"
+                    >Web development</a
+                  >
+                </li>
                 <li>App Development</li>
                 <li>API</li>
                 <li>Cloud</li>
@@ -144,7 +148,7 @@
           <div class="contact-option">
             <ul>
               <li><a href="request.html">Request a Service</a></li>
-              <li><a href="about1.html">Know About Us</a></li>
+              <li><a href="about.html">Know About Us</a></li>
               <li><a href="jobs.html">Join Us</a></li>
               <li><a href="#">Learn With Us</a></li>
             </ul>
@@ -302,7 +306,10 @@
             </div>
 
             <div class="home-start-card-list d-flex al-center">
-              <div class="home-start-card home-card-1">
+              <div
+                class="home-start-card home-card-1 d-flex al-center jc-center"
+                style="flex-direction: column"
+              >
                 <figure>
                   <img src="images/home/ask.png" alt="Consult" />
                 </figure>
@@ -476,6 +483,7 @@
         </div>
       </section>
 
+      <!-- our success -->
       <section class="home-sec-five">
         <div class="container">
           <!-- Top Section -->
@@ -848,6 +856,11 @@
         <p>&copy; 2025 IT-Wings Webtech Solutions. All Rights Reserved.</p>
       </div>
     </footer>
+
+    <!-- scroll to top -->
+    <div class="uppper-up-btn">
+      <a href="#" id="scrollBtn"><i class="fa-solid fa-arrow-up"></i></a>
+    </div>
 
     <!-- jquery -->
     <script
