--- a/jobs.html
+++ b/jobs.html
@@ -4,33 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IT Wings Webtech Solutions</title>
-    <!-- font awsome -->
+
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
-    <!-- owl crousal -->
+
+    <!-- Owl Carousel -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"
-      integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
-    <!-- custom css -->
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css" />
   </head>
+
   <body>
+    <!-- Header -->
     <header>
       <nav class="nav-bar">
         <div class="container">
@@ -46,23 +45,17 @@
                 <i class="fa-solid fa-bars"></i>
               </div>
             </div>
+
             <div class="nav-menu">
               <ul class="d-flex al-center">
-                <li id="nav-home">
-                  <a href="index.html">Home</a>
-                </li>
-                <li id="nav-about">
-                  <a href="about.html">About Us</a>
-                </li>
-                <li id="nav-service">
-                  <a href="#">Service</a>
-                </li>
-                <li id="nav-career">
-                  <a href="career.html" class="active">Career</a>
-                </li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="career.html" class="active">Career</a></li>
                 <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
+
             <div class="contact-btn">
               <a href="contact.html" target="_blank">Get in touch</a>
             </div>
@@ -71,94 +64,7 @@
       </nav>
     </header>
 
-    <!-- home section -->
-    <section class="home-menu-service-setion" id="home-menu-service-setion">
-      <div class="home-menu-service-container">
-        <div class="nav-service-wrapper">
-          <div class="nav-banner">
-            <div class="list">
-              <h2>All</h2>
-              <ul>
-                <li>Govt.</li>
-                <li>Tech</li>
-                <li>Promotional</li>
-                <li>Others</li>
-              </ul>
-            </div>
-            <div class="list">
-              <h2>Govt</h2>
-              <ul>
-                <li>Aadher</li>
-                <li>PAN</li>
-                <li>Voter</li>
-                <li>Home Loan</li>
-                <li>Business Loan</li>
-                <li>See More...</li>
-              </ul>
-            </div>
-            <div class="list">
-              <h2>Tech</h2>
-              <ul>
-                <li>Web Development</li>
-                <li>App Development</li>
-                <li>API</li>
-                <li>Cloud</li>
-                <li>Course</li>
-                <li>See More...</li>
-              </ul>
-            </div>
-            <div class="list">
-              <h2>Promotional</h2>
-              <ul>
-                <li>Facebook</li>
-                <li>Youtube</li>
-                <li>Instagram</li>
-                <li>Twitter</li>
-                <li>Threads</li>
-                <li>See More...</li>
-              </ul>
-            </div>
-            <div class="list">
-              <h2>Others</h2>
-              <ul>
-                <li>Graphics design</li>
-                <li>Logo design</li>
-                <li>UI/UX</li>
-                <li>Ads design</li>
-                <li>See More...</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="contact-nav-section" id="contact-nav-section">
-      <div class="home-menu-service-container">
-        <div class="nav-service-wrapper">
-          <div class="nav-contact-content">
-            <div class="text">
-              <h2>What’s on your mind?</h2>
-              <p>
-                We’re here to help! Tell us what you’re looking for and we’ll
-                get you connected to the right people.
-              </p>
-            </div>
-          </div>
-          <div class="contact-option">
-            <ul>
-              <li><a href="request.html">Request a Service</a></li>
-              <li><a href="about.html">Know About Us</a></li>
-              <li><a href="jobs.html">Join Us</a></li>
-              <li><a href="#">Learn With Us</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- banner -->
+    <!-- Banner -->
     <section
       class="global-banner"
       style="background-image: url(images/career/career-1.jpg)"
@@ -166,172 +72,35 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="global-wrapper">
-          <div class="global-content">
-            <!-- <h1>About Us</h1> -->
-          </div>
+          <div class="global-content"></div>
         </div>
       </div>
     </section>
 
-    <!-- main -->
+    <!-- Main -->
     <main>
-      <!-- Careers Introduction Section -->
+      <!-- Intro -->
       <section class="careers-intro">
         <div class="container">
           <h2>Please join us</h2>
           <p>
             Take a look at the open positions below.<br />
             If none of them suits you, or you feel you could help us in another
-            way, please fill out the form below or contact us directly at
-            contact@company.com
+            way, please fill out the form below or contact us directly.
           </p>
         </div>
       </section>
 
-      <!-- Careers Table Section -->
+      <!-- Dynamic Careers List -->
       <section class="careers-list">
         <div class="container">
-          <h3>Developers</h3>
+          <h3>Open Positions</h3>
 
-          <div class="job-card">
-            <div class="job-row">
-              <div class="job-info">
-                <h4>Senior Web Full Stack Developer</h4>
-                <p>
-                  We are looking for experienced Full Stack developers to join
-                  our team. You will participate in all aspects of the software
-                  development lifecycle including estimating, technical design,
-                  implementation, documentation, testing, deployment, and
-                  support.
-                </p>
-              </div>
-
-              <div class="job-skills">
-                <span>React</span>
-                <span>JavaScript</span>
-                <span>TypeScript</span>
-                <span>Node.js</span>
-                <span>MongoDB</span>
-                <span>API Integration</span>
-                <span>Frontend Frameworks</span>
-              </div>
-
-              <div class="job-location">
-                <p>
-                  Remote — Worldwide<br />
-                  Brno — Czech Republic<br />
-                  Prague — Czech Republic
-                </p>
-              </div>
-            </div>
-
-            <div class="job-actions">
-              <button class="btn apply-btn">Apply Now</button>
-              <button class="btn learn-btn">Learn More</button>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Contact / Hire Form Section -->
-      <section class="careers-contact">
-        <div class="container">
-          <div class="careers-wrapper">
-            <div class="apply">
-              <h2>Post Your Resume / Registration</h2>
-              <p class="note">(*) Asterisk denotes mandatory fields</p>
-
-              <form>
-                <div class="row">
-                  <div class="input-box">
-                    <label>First name *</label>
-                    <input type="text" placeholder="Enter your first name" />
-                  </div>
-
-                  <div class="input-box">
-                    <label>Last name *</label>
-                    <input type="text" placeholder="Enter your last name" />
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="input-box">
-                    <label>Country *</label>
-                    <select>
-                      <option>India</option>
-                      <option>USA</option>
-                      <option>UK</option>
-                      <option>Canada</option>
-                    </select>
-                  </div>
-
-                  <div class="input-box">
-                    <label>Select Experience *</label>
-                    <select>
-                      <option>Fresher</option>
-                      <option>1-2 Years</option>
-                      <option>2-5 Years</option>
-                      <option>5+ Years</option>
-                    </select>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="input-box">
-                    <label>Email *</label>
-                    <input type="email" placeholder="Enter your email" />
-                    <small>(Please enter email as your username)</small>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="input-box">
-                    <label>Select user type *</label>
-                    <select>
-                      <option>Job Seeker</option>
-                      <option>Employer</option>
-                    </select>
-                  </div>
-
-                  <div class="input-box">
-                    <label>Enter skills *</label>
-                    <input type="text" placeholder="Enter up to 5 skills" />
-                    <small>(Only 5 skills allowed)</small>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="input-box">
-                    <label>Select country code *</label>
-                    <select>
-                      <option>+91</option>
-                      <option>+1</option>
-                      <option>+44</option>
-                    </select>
-                  </div>
-
-                  <div class="input-box">
-                    <label>Mobile Number *</label>
-                    <input type="number" placeholder="Enter mobile number" />
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="input-box">
-                    <label>Upload Resume *</label>
-                    <input type="file" />
-                    <small>(.doc, .docx, .rtf, .pdf only)</small>
-                  </div>
-                </div>
-
-                <button class="submit-btn">Submit</button>
-              </form>
-            </div>
-          </div>
+          <!-- Dynamic List Container -->
+          <div id="job-container"></div>
         </div>
       </section>
     </main>
-    <!-- end main -->
 
     <!-- footer -->
     <footer class="footer">
@@ -419,32 +188,76 @@
       </div>
     </footer>
 
-    <!-- scroll to top -->
-    <div class="uppper-up-btn">
-      <a href="#" id="scrollBtn"><i class="fa-solid fa-arrow-up"></i></a>
-    </div>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-    <!-- jquery -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <!-- Owl Carousel JS -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"
-      integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <!-- custom js -->
+    <!-- Owl Carousel -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+    <!-- Custom JS -->
     <script src="js/main.js"></script>
+
+    <!-- ⭐ Dynamic Job Fetch Script -->
+    <script>
+      const fetchJob = async () => {
+        try {
+          const response = await fetch(
+            "http://127.0.0.1:8085/main/api/v1/job/all"
+          );
+
+          const result = await response.json();
+          const jobContainer = document.getElementById("job-container");
+
+          if (!result.data || result.data.length === 0) {
+            jobContainer.innerHTML = "<p>No jobs available right now.</p>";
+            return;
+          }
+
+          result.data.forEach((job) => {
+            const skills = job.skillSet
+              .map((s) => `<span>${s}</span>`)
+              .join("");
+
+            const card = `
+          <div class="job-card">
+            <div class="job-row">
+
+              <div class="job-info">
+                <h4>${job.jobTitle}</h4>
+                <p>${job.shortDescription}</p>
+              </div>
+
+              <div class="job-skills">
+                ${skills}
+              </div>
+
+              <div class="job-location">
+                <p>${job.location}</p>
+              </div>
+
+            </div>
+
+            <div class="job-actions">
+              <button class="btn apply-btn">Apply Now</button>
+              <button class="btn learn-btn" onclick="handleJobDes('${job.referenceNumber}')">
+                Learn More
+              </button>
+            </div>
+          </div>
+        `;
+
+            jobContainer.innerHTML += card;
+          });
+        } catch (err) {
+          console.error("Error fetching jobs:", err);
+        }
+      };
+
+      fetchJob();
+
+      const handleJobDes = (referenceNumber) => {
+        window.location.href = "job_des.html?ref=" + referenceNumber;
+      };
+    </script>
   </body>
 </html>
