--- a/job_des.html
+++ b/job_des.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Description + Recommend</title>
+    <title>Job Description</title>
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <!-- header  -->
+    <!-- Header -->
     <header>
       <nav class="nav-bar">
         <div class="container">
@@ -20,137 +20,40 @@
                   <img src="images/Baby.png" alt="logo" />
                 </figure>
               </a>
-
-              <div class="humberger d-none" id="humberger">
-                <i class="fa-solid fa-bars"></i>
-              </div>
             </div>
+
             <div class="nav-menu">
               <ul class="d-flex al-center">
-                <li id="nav-home">
-                  <a href="index.html" class="active">Home</a>
-                </li>
-                <li id="nav-about">
-                  <a href="about.html">About Us</a>
-                </li>
-                <li id="nav-service">
-                  <a href="#">Service</a>
-                </li>
-                <li id="nav-career">
-                  <a href="career.html" class="active">Career</a>
-                </li>
-                <li><a href="#" id="nav-contact">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="career.html" class="active">Career</a></li>
+                <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
+
             <div class="contact-btn">
-              <a href="contact.html" target="_blank">Get in touch</a>
+              <a href="contact.html">Get in touch</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
 
-    <!-- home section -->
-    <section class="home-menu-service-setion" id="home-menu-service-setion">
-      <div class="home-menu-service-container">
-        <div class="nav-service-wrapper">
-          <div class="nav-banner">
-            <div class="list">
-              <h2>All</h2>
-              <ul>
-                <li>Govt.</li>
-                <li>Tech</li>
-                <li>Promotional</li>
-                <li>Others</li>
-              </ul>
-            </div>
-            <div class="list">
-              <h2>Govt</h2>
-              <ul>
-                <li>Aadher</li>
-                <li>PAN</li>
-                <li>Voter</li>
-                <li>Home Loan</li>
-                <li>Business Loan</li>
-                <li>See More...</li>
-              </ul>
-            </div>
-            <div class="list">
-              <h2>Tech</h2>
-              <ul>
-                <li>Web Development</li>
-                <li>App Development</li>
-                <li>API</li>
-                <li>Cloud</li>
-                <li>Course</li>
-                <li>See More...</li>
-              </ul>
-            </div>
-            <div class="list">
-              <h2>Promotional</h2>
-              <ul>
-                <li>Facebook</li>
-                <li>Youtube</li>
-                <li>Instagram</li>
-                <li>Twitter</li>
-                <li>Threads</li>
-                <li>See More...</li>
-              </ul>
-            </div>
-            <div class="list">
-              <h2>Others</h2>
-              <ul>
-                <li>Graphics design</li>
-                <li>Logo design</li>
-                <li>UI/UX</li>
-                <li>Ads design</li>
-                <li>See More...</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="contact-nav-section" id="contact-nav-section">
-      <div class="home-menu-service-container">
-        <div class="nav-service-wrapper">
-          <div class="nav-contact-content">
-            <div class="text">
-              <h2>What’s on your mind?</h2>
-              <p>
-                We’re here to help! Tell us what you’re looking for and we’ll
-                get you connected to the right people.
-              </p>
-            </div>
-          </div>
-          <div class="contact-option">
-            <ul>
-              <li><a href="request.html">Request a Service</a></li>
-              <li><a href="about.html">Know About Us</a></li>
-              <li><a href="jobs.html">Join Us</a></li>
-              <li><a href="#">Learn With Us</a></li>
-            </ul>
-          </div>
+    <!-- ===== Banner ===== -->
+    <section
+      class="job-banner"
+      style="background-image: url('images/career/career-5.jpg')"
+    >
+      <div class="container">
+        <div class="banner-content">
+          <h1 id="jobTitle">Loading...</h1>
+          <p id="shortDescription"></p>
         </div>
       </div>
     </section>
 
     <main>
-      <!-- ===== Job Banner ===== -->
-      <section
-        class="job-banner"
-        style="background-image: url('images/career-3.jpg')"
-      >
-        <div class="container">
-          <div class="banner-content">
-            <h1>Azure DevOps Engineer</h1>
-            <p>Join our cloud engineering team and build the future with us.</p>
-          </div>
-        </div>
-      </section>
-
       <!-- ===== Job Description Section ===== -->
       <section class="job-description-section">
         <div class="container">
@@ -160,90 +63,172 @@
               <h2 class="section-title">Job Description</h2>
 
               <div class="job-details-grid">
-                <div class="job-item"><span>Skill Set:</span> Azure DevOps</div>
                 <div class="job-item">
-                  <span>Total Experience:</span> 5 - 8 Years
+                  <span>Skill Set:</span> <span id="skills"></span>
                 </div>
                 <div class="job-item">
-                  <span>Location:</span> Bengaluru, India
+                  <span>Total Experience:</span> <span id="experience"></span>
+                </div>
+                <div class="job-item">
+                  <span>Location:</span> <span id="location"></span>
                 </div>
                 <div class="job-item"><span>Domain:</span> IT</div>
-                <div class="job-item"><span>Openings:</span> 1</div>
-                <div class="job-item"><span>Posted:</span> 07/11/2025</div>
-                <div class="job-item"><span>Expiry:</span> 31/12/2025</div>
-                <div class="job-item"><span>Reference No:</span> 4002593</div>
+                <div class="job-item">
+                  <span>Openings:</span> <span id="openings"></span>
+                </div>
+                <div class="job-item">
+                  <span>Posted:</span> <span id="postedDate"></span>
+                </div>
+                <div class="job-item">
+                  <span>Expiry:</span> <span id="expiryDate"></span>
+                </div>
+                <div class="job-item">
+                  <span>Reference No:</span> <span id="referenceNumber"></span>
+                </div>
               </div>
 
               <hr />
 
               <h2 class="section-title">Job Summary</h2>
-              <p class="job-summary">
-                As an Azure DevOps Engineer, you’ll architect and implement
-                modern CI/CD pipelines, automate cloud infrastructure using
-                Terraform and ARM templates, and enhance deployment performance
-                through containerization with Kubernetes. Collaborate with
-                developers to streamline delivery, improve monitoring, and
-                ensure optimal cloud scalability and security.
-              </p>
-
-              <ul class="job-responsibilities">
-                <li>Design, automate, and maintain Azure infrastructure.</li>
-                <li>
-                  Implement CI/CD pipelines for code integration and deployment.
-                </li>
-                <li>Monitor and optimize Kubernetes clusters.</li>
-                <li>
-                  Collaborate with cross-functional teams to deliver
-                  high-quality solutions.
-                </li>
-              </ul>
+              <p id="fullDescription" class="job-summary"></p>
             </div>
 
-            <!-- Right Side: Apply Box -->
+            <!-- Apply Box -->
             <aside class="apply-box">
               <div class="apply-card">
                 <h3>Interested in this role?</h3>
                 <p>Be part of our growing technology team.</p>
-                <a href="apply.html" class="apply-btn">Apply Now</a>
+                <a href="#careers-contact" class="apply-btn">Apply Now</a>
               </div>
             </aside>
           </div>
         </div>
       </section>
 
-      <!-- ===== Recommend Section ===== -->
-      <section class="recommend-section">
+      <!-- Resume Form -->
+      <section class="careers-contact" id="careers-contact">
         <div class="container">
-          <div class="recommend-wrapper">
-            <h2>Recommend to a Friend</h2>
-            <p>
-              Know someone perfect for this role? Send them the opportunity!
-            </p>
+          <div class="careers-wrapper">
+            <div class="apply">
+              <h2>Post Your Resume / Registration</h2>
+              <p class="note">(*) Asterisk denotes mandatory fields</p>
 
-            <form class="recommend-form">
-              <div class="form-grid">
-                <div class="form-group">
-                  <label>Your Name*</label>
-                  <input type="text" placeholder="Enter your name" />
-                </div>
-                <div class="form-group">
-                  <label>Your Email*</label>
-                  <input type="email" placeholder="Enter your email" />
-                </div>
-                <div class="form-group">
-                  <label>Friend’s Name*</label>
-                  <input type="text" placeholder="Enter your friend's name" />
-                </div>
-                <div class="form-group">
-                  <label>Friend’s Email*</label>
-                  <input type="email" placeholder="Enter your friend's email" />
-                </div>
-              </div>
+              <form id="applyForm">
+                <div class="row">
+                  <div class="input-box">
+                    <label>First Name *</label>
+                    <input
+                      type="text"
+                      required
+                      placeholder="Enter your first name"
+                    />
+                  </div>
 
-              <button type="submit" class="submit-btn">
-                Submit Recommendation
-              </button>
-            </form>
+                  <div class="input-box">
+                    <label>Last Name *</label>
+                    <input
+                      type="text"
+                      required
+                      placeholder="Enter your last name"
+                    />
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="input-box">
+                    <label>Country *</label>
+                    <select required>
+                      <option value="">Select Country</option>
+                      <option>India</option>
+                      <option>USA</option>
+                      <option>UK</option>
+                      <option>Canada</option>
+                    </select>
+                  </div>
+
+                  <div class="input-box">
+                    <label>Experience *</label>
+                    <select required>
+                      <option value="">Select Experience</option>
+                      <option>Fresher</option>
+                      <option>1-2 Years</option>
+                      <option>2-5 Years</option>
+                      <option>5+ Years</option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="input-box">
+                    <label>Email *</label>
+                    <input
+                      type="email"
+                      required
+                      placeholder="Enter your email"
+                    />
+                    <small>(Please enter email as your username)</small>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="input-box">
+                    <label>Application Type *</label>
+                    <select required>
+                      <option value="">Select Type</option>
+                      <option>Full-Time</option>
+                      <option>Part-Time</option>
+                      <option>Freelance</option>
+                      <option>Internship</option>
+                      <option>Contract</option>
+                    </select>
+                  </div>
+
+                  <div class="input-box">
+                    <label>Skills *</label>
+                    <input
+                      type="text"
+                      required
+                      placeholder="Enter up to 5 skills"
+                    />
+                    <small>(Example: Java, React, UI/UX)</small>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="input-box">
+                    <label>Country Code *</label>
+                    <select required>
+                      <option value="">Choose</option>
+                      <option>+91</option>
+                      <option>+1</option>
+                      <option>+44</option>
+                    </select>
+                  </div>
+
+                  <div class="input-box">
+                    <label>Mobile Number *</label>
+                    <input
+                      type="tel"
+                      required
+                      maxlength="10"
+                      placeholder="Enter mobile number"
+                    />
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="input-box">
+                    <label>Upload Resume *</label>
+                    <input type="file" required accept=".pdf,.doc,.docx,.rtf" />
+                    <small>(Allowed: .doc, .docx, .rtf, .pdf)</small>
+                  </div>
+                </div>
+
+                <button type="submit" class="submit-btn">
+                  Submit Application
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </section>
@@ -335,11 +320,61 @@
       </div>
     </footer>
 
-    <!-- scroll to top -->
-    <div class="uppper-up-btn">
-      <a href="#" id="scrollBtn"><i class="fa-solid fa-arrow-up"></i></a>
-    </div>
+    <!-- ===== Dynamic Job Fetch Script ===== -->
+    <script>
+      // Step 1: Read referenceNumber from URL
+      const urlParams = new URLSearchParams(window.location.search);
+      const referenceNumber = urlParams.get("ref");
 
-    <script src="script.js"></script>
+      if (!referenceNumber) {
+        alert("Invalid job reference number!");
+      }
+
+      // Step 2: Fetch Job Details By Reference Number
+      const fetchJobDetails = async () => {
+        try {
+          const response = await fetch(
+            `http://127.0.0.1:8085/main/api/v1/job/ref/${referenceNumber}`
+          );
+
+          const result = await response.json();
+
+          if (!result.data) {
+            document.querySelector(".job-details").innerHTML =
+              "<p>Job not found.</p>";
+            return;
+          }
+
+          const job = result.data;
+
+          // Step 3: Fill dynamic data
+          document.getElementById("jobTitle").textContent = job.jobTitle;
+          document.getElementById("shortDescription").textContent =
+            job.shortDescription;
+          document.getElementById("fullDescription").textContent =
+            job.fullDescription;
+
+          document.getElementById("location").textContent = job.location;
+          document.getElementById("openings").textContent = job.openings;
+          document.getElementById("postedDate").textContent = job.postedDate;
+          document.getElementById("expiryDate").textContent = job.expiryDate;
+
+          document.getElementById("experience").textContent =
+            job.experienceMin + " - " + job.experienceMax + " Years";
+
+          document.getElementById("referenceNumber").textContent =
+            job.referenceNumber;
+
+          // Skills
+          document.getElementById("skills").innerHTML = job.skillSet
+            .map((s) => `<span>${s}</span>`)
+            .join(", ");
+        } catch (error) {
+          console.error("Error:", error);
+        }
+      };
+
+      fetchJobDetails();
+    </script>
   </body>
 </html>
