fix home section

--- a/jobs.html
+++ b/jobs.html
@@ -64,6 +64,97 @@
       </nav>
     </header>
 
+    <!-- home section -->
+    <section class="home-menu-service-setion" id="home-menu-service-setion">
+      <div class="home-menu-service-container">
+        <div class="nav-service-wrapper">
+          <div class="nav-banner">
+            <div class="list">
+              <h2>All</h2>
+              <ul>
+                <li>Govt.</li>
+                <li>Tech</li>
+                <li>Promotional</li>
+                <li>Others</li>
+              </ul>
+            </div>
+            <div class="list">
+              <h2>Govt</h2>
+              <ul>
+                <li>Aadher</li>
+                <li>PAN</li>
+                <li>Voter</li>
+                <li>Home Loan</li>
+                <li>Business Loan</li>
+                <li>See More...</li>
+              </ul>
+            </div>
+            <div class="list">
+              <h2>Tech</h2>
+              <ul>
+                <li>
+                  <a href="./serviceInfo.html?id=web-development"
+                    >Web development</a
+                  >
+                </li>
+                <li>App Development</li>
+                <li>API</li>
+                <li>Cloud</li>
+                <li>Course</li>
+                <li>See More...</li>
+              </ul>
+            </div>
+            <div class="list">
+              <h2>Promotional</h2>
+              <ul>
+                <li>Facebook</li>
+                <li>Youtube</li>
+                <li>Instagram</li>
+                <li>Twitter</li>
+                <li>Threads</li>
+                <li>See More...</li>
+              </ul>
+            </div>
+            <div class="list">
+              <h2>Others</h2>
+              <ul>
+                <li>Graphics design</li>
+                <li>Logo design</li>
+                <li>UI/UX</li>
+                <li>Ads design</li>
+                <li>See More...</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact-nav-section" id="contact-nav-section">
+      <div class="home-menu-service-container">
+        <div class="nav-service-wrapper">
+          <div class="nav-contact-content">
+            <div class="text">
+              <h2>What’s on your mind?</h2>
+              <p>
+                We’re here to help! Tell us what you’re looking for and we’ll
+                get you connected to the right people.
+              </p>
+            </div>
+          </div>
+          <div class="contact-option">
+            <ul>
+              <li><a href="request.html">Request a Service</a></li>
+              <li><a href="about.html">Know About Us</a></li>
+              <li><a href="jobs.html">Join Us</a></li>
+              <li><a href="#">Learn With Us</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Banner -->
     <section
       class="global-banner"
