--- a/service.html
+++ b/service.html
@@ -57,8 +57,8 @@
       </nav>
     </header>
 
-    <!-- NAVIGATION MENU SECTION -->
-    <section class="home-menu-service-setion">
+    <!-- home section -->
+    <section class="home-menu-service-setion" id="home-menu-service-setion">
       <div class="home-menu-service-container">
         <div class="nav-service-wrapper">
           <div class="nav-banner">
@@ -71,29 +71,32 @@
                 <li>Others</li>
               </ul>
             </div>
-
             <div class="list">
               <h2>Govt</h2>
               <ul>
-                <li>Aadhaar</li>
+                <li>Aadher</li>
                 <li>PAN</li>
                 <li>Voter</li>
                 <li>Home Loan</li>
                 <li>Business Loan</li>
+                <li>See More...</li>
               </ul>
             </div>
-
             <div class="list">
               <h2>Tech</h2>
               <ul>
-                <li>Web Development</li>
+                <li>
+                  <a href="./serviceInfo.html?id=web-development"
+                    >Web development</a
+                  >
+                </li>
                 <li>App Development</li>
                 <li>API</li>
                 <li>Cloud</li>
-                <li>Courses</li>
+                <li>Course</li>
+                <li>See More...</li>
               </ul>
             </div>
-
             <div class="list">
               <h2>Promotional</h2>
               <ul>
@@ -102,16 +105,17 @@
                 <li>Instagram</li>
                 <li>Twitter</li>
                 <li>Threads</li>
+                <li>See More...</li>
               </ul>
             </div>
-
             <div class="list">
               <h2>Others</h2>
               <ul>
-                <li>Graphics Design</li>
-                <li>Logo Design</li>
+                <li>Graphics design</li>
+                <li>Logo design</li>
                 <li>UI/UX</li>
-                <li>Ads Design</li>
+                <li>Ads design</li>
+                <li>See More...</li>
               </ul>
             </div>
           </div>
