--- a/serviceInfo.html
+++ b/serviceInfo.html
@@ -83,7 +83,11 @@
             <div class="list">
               <h2>Tech</h2>
               <ul>
-                <li>Web Development</li>
+                <li>
+                  <a href="./serviceInfo.html?id=web-development"
+                    >Web development</a
+                  >
+                </li>
                 <li>App Development</li>
                 <li>API</li>
                 <li>Cloud</li>
